--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emoji-picker-react": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.0.1",
     "tailwind-merge": "^2.5.5",
     "vite-plugin-svgr": "^4.3.0"
   },
