--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
     "vite-plugin-svgr": "^4.3.0"
   },
